added thumbs to images

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 DB_PATH=.
-DB_NAME=database.db
+DB_NAME='database.db'
 IMAGES_PATH='E:\Drawing_refs'
+THUMB_PATH='E:\Drawing_refs_thumbs'
+THUMB_MAX_SIZE='200'
 SERVER_PORT='7071'
