moved ref library to another drive

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_PATH=.
 DB_NAME='database.db'
-IMAGES_PATH='E:\Drawing_refs'
-THUMB_PATH='E:\Drawing_refs_thumbs'
+IMAGES_PATH='D:\Cloud\Art\Ref_Buddy\library'
+THUMB_PATH='D:\Cloud\Art\Ref_Buddy\library_thumbs'
 THUMB_MAX_SIZE='200'
 SERVER_PORT='7071'
 DEFAULT_FPS_SPLIT='1'
