--- a/.env
+++ b/.env
@@ -4,5 +4,8 @@ IMAGES_PATH='D:\Cloud\Art\Ref_Buddy\library'
 THUMB_PATH='D:\Cloud\Art\Ref_Buddy\library_thumbs'
 THUMB_MAX_SIZE='200'
 SERVER_PORT='7071'
-DEFAULT_FPS_SPLIT='1'
-DEFAULT_PER_PAGE_LIMIT='100'
+
+# defaults
+FPS_SPLIT='1'
+PER_PAGE_LIMIT='100'
+STUDY_TIMER='120'
