added TEMP_PATH to env config

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DB_PATH=.
 DB_NAME='database.db'
 IMAGES_PATH='D:\Cloud\Art\Ref_Buddy\library'
 THUMB_PATH='D:\Cloud\Art\Ref_Buddy\library_thumbs'
+TMP_PATH='D:\Cloud\Art\Ref_Buddy\tmp'
 THUMB_MAX_SIZE='200'
 SERVER_PORT='7071'
 
