--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ TMP_PATH='D:\Cloud\Art\Ref_Buddy\tmp'
 THUMB_MAX_SIZE='200'
 SERVER_PORT='7071'
 
+IMPORT_FORMATS='png,jpg,jpeg,webp,gif'
+
 # defaults
 FPS_SPLIT='1'
 PER_PAGE_LIMIT='100'
