moved db backups to cloud

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_PATH='.'
 DB_NAME='database.db'
-DB_BACKUP_PATH='.\db_backups'
+DB_BACKUP_PATH='D:\Cloud\Art\Ref_Buddy\db_backups'
 # minutes
 DB_BACKUP_INTERVAL_MIN=60
 DB_BACKUP_MAX_COUNT=50
