feat: server can now try to open video file in a default video player, if user set it up in the env file

--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ SERVER_PORT='7071'
 FPS_SPLIT='1'
 PER_PAGE_LIMIT='100'
 STUDY_TIMER='120'
+
+VIDEO_PLAYER_PATH='C:\Program Files (x86)\Light Alloy\LA.exe'
