refactor: moved env config to a dedicated dir and ignored all files in config but default folder

--- a/config/default/.env
+++ b/config/default/.env
@@ -1,4 +1,4 @@
-DB_PATH='.'
+DB_PATH='D:\Cloud\Art\Ref_Buddy\db'
 DB_NAME='database.db'
 DB_BACKUP_PATH='D:\Cloud\Art\Ref_Buddy\db_backups'
 # minutes
