--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 .idea/
 venv/
 
-# ignoring all but default config
-config/**
-!config/default
+# ignoring user config
+config/user.env
 
 db_backups/
 
