added some comments to config

--- a/config/default.env
+++ b/config/default.env
@@ -1,22 +1,28 @@
-# path to the folder where database would be stored
-DB_PATH=''
+#
+# Default config for the ref-buddy tool.
+# Don't change anything here.
+#
+# Instead, create file called 'user.env' next to this one and put all PATH's overrides there
+#
 
-DB_NAME='database.db'
-DB_BACKUP_PATH=''
+DB_PATH=''              # path to the folder where database would be stored
+
+DB_NAME='database.db'   # database name, should be in DB_PATH folder
+DB_BACKUP_PATH=''       # folder to put database auto backups, can be the same as DB_PATH
 # minutes
 DB_BACKUP_INTERVAL_MIN=120
 DB_BACKUP_MAX_COUNT=30
 
-IMAGES_PATH=''
-THUMB_PATH=''
-TMP_PATH=''
-THUMB_MAX_SIZE='200'
-IMPORT_FORMATS='png,jpg,jpeg,webp,gif'
+IMAGES_PATH=''          # folder where images are stored
+THUMB_PATH=''           # SHOULD BE DIFFERENT FROM IMAGES_PATH. folder where auto generated image thumbs are stored
+TMP_PATH=''             # folder for temporay files, should be different from other folders
+THUMB_MAX_SIZE='200'    # pixels, longest side
+IMPORT_FORMATS='png,jpg,jpeg,webp,gif' # images that are allowed to be imported. for mp4 - generate gif preview first
 
 # defaults
-SERVER_PORT='7071'
+SERVER_PORT='7071'      # this is so you can unambiously address your image web server, like https://localhost:SERVER_PORT
 FPS_SPLIT='1'
 PER_PAGE_LIMIT='100'
 STUDY_TIMER='120'
 
-VIDEO_PLAYER_PATH=''
+VIDEO_PLAYER_PATH=''    # path to a media player to open mp4 files with
