--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 click==8.1.3
 colorama==0.4.6
 Flask==2.2.3
+Flask_Caching==2.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
@@ -9,3 +10,6 @@ python-dotenv==1.0.0
 Werkzeug==2.2.3
 
 SQLAlchemy~=2.0.15
+numpy~=1.25.0
+sklearn~=0.0.post5
+scikit-learn~=1.2.2
