just pushing changed to sync on another machine

--- a/config/default.env
+++ b/config/default.env
@@ -16,6 +16,7 @@ DB_BACKUP_MAX_COUNT=30
 IMAGES_PATH=''          # folder where images are stored
 THUMB_PATH=''           # SHOULD BE DIFFERENT FROM IMAGES_PATH. folder where auto generated image thumbs are stored
 TMP_PATH=''             # folder for temporay files, should be different from other folders
+TMP_PATH_GIF='temp'     # folder where gif and webp frames would be stored after splitting. Recommened to have it outside of IMAGES_PATH
 THUMB_MAX_SIZE='200'    # pixels, longest side
 IMPORT_FORMATS='png,jpg,jpeg,webp,gif' # images that are allowed to be imported. for mp4 - generate gif preview first
 
