feat: saving canvas drawings!

--- a/config/default.env
+++ b/config/default.env
@@ -14,6 +14,7 @@ DB_BACKUP_INTERVAL_MIN=120
 DB_BACKUP_MAX_COUNT=30
 
 IMAGES_PATH=''          # folder where images are stored
+DRAWING_PATH=''         # canas drawings storered here
 THUMB_PATH=''           # SHOULD BE DIFFERENT FROM IMAGES_PATH. folder where auto generated image thumbs are stored
 TMP_PATH=''             # folder for temporay files, should be different from other folders
 TMP_PATH_GIF='temp'     # folder where gif and webp frames would be stored after splitting. Recommened to have it outside of IMAGES_PATH
