--- a/config/default.env
+++ b/config/default.env
@@ -5,20 +5,20 @@
 # Instead, create file called 'user.env' next to this one and put all PATH's overrides there
 #
 
-DB_PATH=''              # path to the folder where database would be stored
+DB_PATH='./library/database'             # path to the folder where database would be stored
 
-DB_NAME='database.db'   # database name, should be in DB_PATH folder
-DB_BACKUP_PATH=''       # folder to put database auto backups, can be the same as DB_PATH
+DB_NAME='database.db'                    # database name, should be in DB_PATH folder
+DB_BACKUP_PATH='./library/backups'       # folder to put database auto backups, can be the same as DB_PATH
 # minutes
 DB_BACKUP_INTERVAL_MIN=120
 DB_BACKUP_MAX_COUNT=30
 
-IMAGES_PATH=''          # folder where images are stored
-DRAWING_PATH=''         # canas drawings storered here
-THUMB_PATH=''           # SHOULD BE DIFFERENT FROM IMAGES_PATH. folder where auto generated image thumbs are stored
-TMP_PATH=''             # folder for temporay files, should be different from other folders
-TMP_PATH_GIF='temp'     # folder where gif and webp frames would be stored after splitting. Recommened to have it outside of IMAGES_PATH
-THUMB_MAX_SIZE='200'    # pixels, longest side
+IMAGES_PATH='./library/images'    # folder where images are stored
+DRAWING_PATH='./library/drawings' # canvas drawings storered here
+THUMB_PATH='./library/thumbs'     # SHOULD BE DIFFERENT FROM IMAGES_PATH. folder where auto generated image thumbs are stored
+TMP_PATH='./library/tmp'          # folder for temporay files, should be different from other folders
+TMP_PATH_GIF='./library/tmp_gifs' # folder where gif and webp frames would be stored after splitting. Recommened to have it outside of IMAGES_PATH
+THUMB_MAX_SIZE='200'              # pixels, longest side
 IMPORT_FORMATS='png,jpg,jpeg,webp,gif' # images that are allowed to be imported. for mp4 - generate gif preview first
 
 # defaults
